--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "paths": {
         "common/*": ["src/common/*"],
         "components/*": ["src/components/*"],
-        "pages/*": ["src/pages/*"]
+        "pages/*": ["src/pages/*"],
+        "views/*": ["src/views/*"]
     },
   },
   "include": [
