--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@headlessui/react": "^1.2.0",
     "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "next": "10.2.0",
     "next-urql": "^3.1.0",
     "react": "17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-is": "^17.0.2",
     "typescript": "^4.2.4",
