--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql-tag": "^2.11.0",
     "next": "10.2.0",
     "next-urql": "^3.1.0",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
